TSYSTEM #3 Home page
added animations
upgrade home page

--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,1 +1,29 @@
-<p>info works!</p>
+<div class="container">
+    <div class="block-text">
+        <div class="stage-title">
+            <p>Your first step to the Russian language</p>
+        </div>
+        <div class="stage-description">
+            <p>We help you lern the letters of the Russian alphabet quickly and easily.</p>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="project-cards">
+        <div class="cards-title">
+            <p>Try our App</p>
+        </div>
+        <div class="card-container">
+            <div class="card project-1-card" routerLink="/indeveloping">
+                <h1>Alphabet</h1>
+                <p>In developing</p>
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="card project-2-card" routerLink="/indeveloping">
+                <h1>Test your knowledge</h1>
+                <p>In developing</p>
+            </div>
+        </div>
+    </div>
+</div>
