--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="page">
     <div class="top-bar">
-        <app-top-bar></app-top-bar>
+        <app-top-bar (onChanged)="onChanged($event)"></app-top-bar>
     </div>
     <div class="container">
         <router-outlet></router-outlet>
@@ -8,4 +8,5 @@
     <div class="footer">
         <app-footer></app-footer>
     </div>
+    <div *ngIf="blockPage" class="block-page"></div>
 </div>
