--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,17 @@
     flex-direction: column;
 }
 
+.block-page {
+    background-color:#000000; 
+    position:fixed; 
+    left: 0;
+    overflow: hidden;
+    height:100%; 
+    width:100vw; 
+    z-index:99;
+    opacity: 0.7;
+}
+
 .top-bar{
     flex-shrink: 0;
 }
