--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,7 @@
 <mat-toolbar class="footer">
-    <h1>Footer</h1>
+    <div class="footer-link">
+        <a href="https://github.com/shendelpavel/alphabet-project">
+            <img src="../../assets/github-logo.svg" alt="githubLogo">
+        </a>
+    </div>
 </mat-toolbar>
