TSSYSTEM #4 Registration page
added registration page
configured routing
added styles
added data record to localstorage

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="footer">
-    <div class="footer-link">
-        <a href="https://github.com/shendelpavel/alphabet-project">
-            <img src="../../assets/github-logo.svg" alt="githubLogo">
-        </a>
-    </div>
+  <div class="footer-link">
+    <a href="https://github.com/shendelpavel/alphabet-project">
+      <img src="../../assets/github-logo.svg" alt="githubLogo" />
+    </a>
+  </div>
 </mat-toolbar>
