--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,8 @@
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
-    margin: 0 auto;
-    width: 1440px;
+  margin: 0 auto;
 }
-    
