--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="page">
-    <div class="top-bar">
-        <app-top-bar (onChanged)="onChanged($event)"></app-top-bar>
-    </div>
-    <div class="container">
-        <router-outlet></router-outlet>
-    </div>
-    <div class="footer">
-        <app-footer></app-footer>
-    </div>
-    <div *ngIf="blockPage" class="block-page"></div>
+  <div class="top-bar">
+    <app-top-bar (blockPage)="blockPage($event)"></app-top-bar>
+  </div>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+  <div class="footer">
+    <app-footer></app-footer>
+  </div>
+  <div *ngIf="isPageBlocked" class="block-page"></div>
 </div>
