TSSYSTEM #5 Login page
update code for login page
fix bugs
added set password feature
added styles for login page
added adaptive styles for home page

--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,6 +1,6 @@
 <div class="dropdown">
   <mat-toolbar class="top-bar">
-    <div>
+    <div class="buttons-container">
       <button mat-icon-button (click)="menuList()">
         <mat-icon>menu</mat-icon>
       </button>
@@ -10,7 +10,7 @@
         <h1>My App</h1>
       </button>
     </div>
-    <div>
+    <div class="buttons-container">
       <button mat-icon-button *ngIf="!isLoggedIn" routerLink="/login">
         <mat-icon>login</mat-icon>
       </button>
