--- a/src/app/components/top-bar/top-bar.component.scss
+++ b/src/app/components/top-bar/top-bar.component.scss
@@ -1,26 +1,30 @@
 .dropdown {
-    position: relative;
-    z-index: 100;
+  position: relative;
+  z-index: 100;
 }
 
 .top-bar {
-    background-color: white;
-    justify-content: space-between;
-    border-bottom: 1px solid rgba(25,25,25,.1);
+  background-color: white;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(25, 25, 25, 0.1);
+}
+
+.buttons-container {
+  width: 80px;
 }
 
 .menu-list {
-    position: absolute;
-    z-index: 101;
-    height: 0px;
-    overflow: hidden;
-    transition: height 0.4s;
+  position: absolute;
+  z-index: 101;
+  height: 0px;
+  overflow: hidden;
+  transition: height 0.4s;
 
-    .menu-element {
-        margin-right: 10px;
-    }
+  .menu-element {
+    margin-right: 10px;
+  }
 }
 
-.show-menu-list{
-    height: 175px;
+.show-menu-list {
+  height: 175px;
 }
