--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,76 +1,151 @@
 $cardHeight: 720px;
 $cardWidth: 1080px;
+$cardContainerHeight: $cardHeight + 30px;
 
 .container {
-    width: 100%;
-    box-sizing: border-box;
-    padding: 0px 15px;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0px 15px;
 }
 
 .block-text {
-    padding: 129px 0px;
-    border-bottom: 1px solid rgba(25,25,25,.1);
+  padding: 129px 0px;
+  border-bottom: 1px solid rgba(25, 25, 25, 0.1);
+
+  @media (max-width: 767px) {
+    padding: 89px 0px;
+  }
+
+  @media (max-width: 424px) {
+    padding: 49px 0px;
+  }
 }
 
-.stage-title, .cards-title {
-    font-size: 32px;
-    font-weight: 700;
-    line-height: 1.25;
-    max-width: 790px;
-    margin: 0 auto 15px;
-    text-align: center;
+.stage-title,
+.cards-title {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1.25;
+  max-width: 790px;
+  margin: 0 auto 15px;
+  text-align: center;
 }
 
 .stage-description {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    max-width: 327px;
-    margin: 0 auto;
-    text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  max-width: 327px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .project-cards {
-    padding: 50px 0px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
+  padding: 50px 0px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
 }
 
 .card {
-    height: $cardHeight;
-    width: $cardWidth;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    color: rgb(255, 250, 242);
-    border-radius: 10px;
-    transition: all 0.2s;
+  height: $cardHeight;
+  width: $cardWidth;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  color: rgb(255, 250, 242);
+  border-radius: 10px;
+  transition: all 0.2s;
+
+  @media (max-width: 1439px) {
+    height: $cardHeight - 100px;
+    width: $cardWidth - 100px;
+  }
+
+  @media (max-width: 1023px) {
+    height: $cardHeight - 350px;
+    width: $cardWidth - 350px;
+  }
+
+  @media (max-width: 767px) {
+    height: $cardHeight - 450px;
+    width: $cardWidth - 700px;
+  }
+
+  @media (max-width: 424px) {
+    height: $cardHeight - 500px;
+    width: $cardWidth - 750px;
+  }
+
+  @media (max-width: 374px) {
+    height: $cardHeight - 500px;
+    width: $cardWidth - 800px;
+  }
 }
 
 .card-container {
-    height: $cardHeight + 30px;
-    margin-top: 35px;
+  height: $cardContainerHeight;
+  margin-top: 35px;
+
+  @media (max-width: 1439px) {
+    height: $cardContainerHeight - 100px;
+  }
+
+  @media (max-width: 1023px) {
+    height: $cardContainerHeight - 350px;
+  }
+
+  @media (max-width: 767px) {
+    height: $cardContainerHeight - 450px;
+  }
+
+  @media (max-width: 424px) {
+    height: $cardContainerHeight - 525px;
+  }
 }
 
 .project-1-card {
-    background: -webkit-linear-gradient(315deg, rgb(120, 120, 120) 6%, rgb(208, 208, 208) 100%);
-    background: -moz-linear-gradient(315deg, rgb(120, 120, 120) 6%, rgb(208, 208, 208) 100%);
-    background: linear-gradient(315deg, rgb(120, 120, 120) 6%, rgb(208, 208, 208) 100%);
+  background: -webkit-linear-gradient(
+    315deg,
+    rgb(120, 120, 120) 6%,
+    rgb(208, 208, 208) 100%
+  );
+  background: -moz-linear-gradient(
+    315deg,
+    rgb(120, 120, 120) 6%,
+    rgb(208, 208, 208) 100%
+  );
+  background: linear-gradient(
+    315deg,
+    rgb(120, 120, 120) 6%,
+    rgb(208, 208, 208) 100%
+  );
 }
 
 .project-2-card {
-    background: -webkit-linear-gradient(315deg, rgb(120, 120, 120) 6%, rgb(208, 208, 208) 100%);
-    background: -moz-linear-gradient(315deg, rgb(120, 120, 120) 6%, rgb(208, 208, 208) 100%);
-    background: linear-gradient(315deg, rgb(120, 120, 120) 6%, rgb(208, 208, 208) 100%);
+  background: -webkit-linear-gradient(
+    315deg,
+    rgb(120, 120, 120) 6%,
+    rgb(208, 208, 208) 100%
+  );
+  background: -moz-linear-gradient(
+    315deg,
+    rgb(120, 120, 120) 6%,
+    rgb(208, 208, 208) 100%
+  );
+  background: linear-gradient(
+    315deg,
+    rgb(120, 120, 120) 6%,
+    rgb(208, 208, 208) 100%
+  );
 }
 
 .card:hover {
-    cursor: pointer;
-    height: $cardHeight + 30px;
-    width: $cardWidth + 30px;
-    box-shadow: 0 5px 30px 0 rgba(0,0,0,0.4);
+  cursor: pointer;
+  height: $cardHeight + 30px;
+  width: $cardWidth + 30px;
+  box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.4);
 }
